; ModuleID = '/home/carl/AnghaBench/libsodium/src/libsodium/crypto_hash/sha256/cp/extr_hash_sha256_cp.c_crypto_hash_sha256.c'
source_filename = "/home/carl/AnghaBench/libsodium/src/libsodium/crypto_hash/sha256/cp/extr_hash_sha256_cp.c_crypto_hash_sha256.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crypto_hash_sha256(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = call i32 @crypto_hash_sha256_init(i32* %7)
  %9 = load i8*, i8** %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = call i32 @crypto_hash_sha256_update(i32* %7, i8* %9, i64 %10)
  %12 = load i8*, i8** %4, align 8
  %13 = call i32 @crypto_hash_sha256_final(i32* %7, i8* %12)
  ret i32 0
}

declare dso_local i32 @crypto_hash_sha256_init(i32*) #1

declare dso_local i32 @crypto_hash_sha256_update(i32*, i8*, i64) #1

declare dso_local i32 @crypto_hash_sha256_final(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
